Connect spring security

--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -1,10 +1,12 @@
 <!DOCTYPE>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title> noSkype> </title>
+    <title> Greeting page  </title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <p th:text="'Hello, ' + ${name} + '!'" />
+    <p th:text="'Hello , ' + ${name} + 'you are on the main page noSkype programm!'" />
+
+    <a href="/main"> Main </a>
 </body>
 </html>
