Add page login and main

--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -5,8 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <p th:text="'Hello , ' + ${name} + 'you are on the main page noSkype programm!'" />
-
-    <a href="/main"> Main </a>
+    <h1> Hello, you are on the main page noSkype programm! </h1>
+    <a href="/main"> noSkype </a>
 </body>
 </html>
