--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,8 +13,8 @@
 </div>
 <h1>Login Page</h1>
 <form th:action="@{/login}" method="post">
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
+    <div><label> User Name : <input type="text" name="username" required/> </label></div>
+    <div><label> Password: <input type="password" name="password" required/> </label></div>
     <div><input type="submit" value="Sign In"/></div>
     <div><a href="/registration">registration</a></div>
 </form>
