--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -8,9 +8,12 @@
 <h1>Registration Page</h1>
 <p th:text= "${message}" />
 <form th:action="@{/registration}" method="post">
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
-    <div><input type="submit" value="Sign In"/></div>
+    <div><label> User Name: <input type="text" name="username" required/> </label></div>
+    <div><label> Password: <input type="password" name="password" required/> </label></div>
+    <div><label> Confirm : <input type="password" name="confirmPassword" required/> </label></div>
+    <div><label> Email: <input type="email" name="email"/> </label></div>
+    <div><label> Phone : <input type="text" name="phone"/> </label></div>
+    <div><input type="submit" value="Submit" /></div>
 </form>
 </body>
 </html>
