--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -11,8 +11,8 @@
     <div><label> User Name: <input type="text" name="username" required/> </label></div>
     <div><label> Password: <input type="password" name="password" required/> </label></div>
     <div><label> Confirm : <input type="password" name="confirmPassword" required/> </label></div>
-    <div><label> Email: <input type="email" name="email"/> </label></div>
-    <div><label> Phone : <input type="text" name="phone"/> </label></div>
+    <div><label> Email: <input type="email" name="email" required/> </label></div>
+    <div><label> Phone : <input type="text" name="phone" required/> </label></div>
     <div><input type="submit" value="Submit" /></div>
 </form>
 </body>
