--- a/src/main/resources/templates/errors/404.html
+++ b/src/main/resources/templates/errors/404.html
@@ -50,7 +50,7 @@
 		<!-- txt -->
 		<div class="txt">
 			<p>We're sorry, but something went wrong.</p>
-			<a href="#" class="btn">Go Home</a>
+			<a href="/" class="btn">Go Home</a>
 		</div>
 	</div>
 	<script type="text/javascript" src="/static/js/jquery-1.11.3.min.js"></script>
