--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+    <a href="/get_users">Users</a>
     <form th:action="@{/logout}" method="post">
         <input type="submit" value="Sign Out"/>
     </form>
