Add thymeleaf-spring-security-5, and add href get_users in navbar, just for ADMIN role"

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,4 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
       xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <div th:fragment="header-css">
@@ -10,30 +10,27 @@
     </div>
 </head>
 <body>
-<div th:fragment = "header">
-<!----------------------NavBar------------------------->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/main">noSkype</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<div th:fragment="header">
+    <!----------------------NavBar------------------------->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/main">noSkype</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="/">Home </a>
-            </li>
-            <div sec:authorize="hasRole('ADMIN')">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
+                    <a class="nav-link" href="/">Home </a>
+                </li>
+                <li sec:authorize= "hasAuthority('ADMIN')" class="nav-item">
                     <a class="nav-link" href="/get_users">Users</a>
                 </li>
-            </div>
-
-        </ul>
-    </div>
-</nav>
-<!------------------------------------------------------>
+            </ul>
+        </div>
+    </nav>
+    <!------------------------------------------------------>
 </div>
 </body>
 </html>
