--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+    <div th:replace="fragments/header :: header-css"/>
 <head>
     <title> noSkype </title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+<div th:replace="fragments/header :: header"/>
+
     <a href="/get_users">Users</a>
     <form th:action="@{/logout}" method="post">
         <input type="submit" value="Sign Out"/>
     </form>
+
+<div th:replace="fragments/footer :: footer"/>
 </body>
 </html>
