Add username, registr page and correct size pages

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,6 +3,7 @@
 <head>
     <div th:fragment="header-css">
         <meta name="viewport" content="width=device-width, initial-sc ale=1, shrink-to-fit=no">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
               integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
@@ -30,9 +31,8 @@
             </ul>
             <div class="navbar-text" sec:authentication="name"/>
             <form  sec:authorize="isAuthenticated()" th:action="@{/logout}" method="post">
-                <button class="btn btn-primery" type="submit">sign out</button>
+                <button class="btn btn-primery ml-2" type="submit"> Sign Out</button>
             </form>
-
         </div>
     </nav>
     <!------------------------------------------------------>
