--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,11 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
-    <title>Spring Security Example </title>
+    <title>Sign In</title>
     <div th:replace="fragments/header :: header-css"/>
 </head>
 <body>
 <div th:replace="fragments/header :: header"/>
+
 <div class="container mt-5">
     <h1>Please Sign in</h1>
     <form th:action="@{/login}" method="post">
