--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -8,10 +8,9 @@
 <body>
 <div th:replace="fragments/header :: header"/>
 
-<div class="container">
+<div class="container mt-5">
     <h1> Hello, you are on the main page noSkype programm! </h1>
 </div>
-
 
 <div th:replace="fragments/footer :: footer"/>
 </body>
