--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,131 +1,163 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Video chat</title>
-    </head>
+<head>
+  <script type='text/javascript' src='https://cdn.scaledrone.com/scaledrone.min.js'></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <style>
+    body {
+      display: flex;
+      height: 100vh;
+      margin: 0;
+      align-items: center;
+      justify-content: center;
+      padding: 0 50px;
+      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    }
+    video {
+      max-width: calc(50% - 100px);
+      margin: 0 50px;
+      box-sizing: border-box;
+      border-radius: 2px;
+      padding: 0;
+      box-shadow: rgba(156, 172, 172, 0.2) 0px 2px 2px, rgba(156, 172, 172, 0.2) 0px 4px 4px, rgba(156, 172, 172, 0.2) 0px 8px 8px, rgba(156, 172, 172, 0.2) 0px 16px 16px, rgba(156, 172, 172, 0.2) 0px 32px 32px, rgba(156, 172, 172, 0.2) 0px 64px 64px;
+    }
+    .copy {
+      position: fixed;
+      top: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 16px;
+      color: rgba(0, 0, 0, 0.5);
+    }
+  </style>
+</head>
+<body>
+  <div class="copy">Send your URL to a friend to start a video call</div>
+  <video id="localVideo" autoplay muted></video>
+  <video id="remoteVideo" autoplay></video>
+  <script src="script.js"></script>
+</body>
 
-    <body>
+<script>
+// Generate random room name if needed
+if (!location.hash) {
+  location.hash = Math.floor(Math.random() * 0xFFFFFF).toString(16);
+}
+const roomHash = location.hash.substring(1);
 
-    <body>
-
-    <script>
-        var conn = new WebSocket('wss://192.168.1.6/socket');
-
-        conn.onopen = function() {
-            console.log("Connected to the signaling server");
-        //    initialize();
-        };
-
-        conn.onmessage = function(msg) {
-            console.log("Got message", msg.data);
-            var content = JSON.parse(msg.data);
-            var data = content.data;
-            switch (content.event) {
-            // when somebody wants to call us
-            case "offer":
-                handleOffer(data);
-                break;
-            case "answer":
-                handleAnswer(data);
-                break;
-            // when a remote peer sends an ice candidate to us
-            case "candidate":
-                handleCandidate(data);
-                break;
-            default:
-                break;
-            }
-        };
+// TODO: Replace with your own channel ID
+const drone = new ScaleDrone('yiS12Ts5RdNhebyM');
+// Room name needs to be prefixed with 'observable-'
+const roomName = 'observable-' + roomHash;
+const configuration = {
+  iceServers: [{
+    urls: 'stun:stun.l.google.com:19302'
+  }]
+};
+let room;
+let pc;
 
 
-        const constraints = {
-            video: true,audio : true
-        };
-        navigator.mediaDevices.getUserMedia(constraints).
-            then(function(stream) { /* use the stream */ })
-                .catch(function(err) { /* handle the error */ });
+function onSuccess() {};
+function onError(error) {
+  console.error(error);
+};
 
-        function send(message) {
-            conn.send(JSON.stringify(message));
+drone.on('open', error => {
+  if (error) {
+    return console.error(error);
+  }
+  room = drone.subscribe(roomName);
+  room.on('open', error => {
+    if (error) {
+      onError(error);
+    }
+  });
+  // We're connected to the room and received an array of 'members'
+  // connected to the room (including us). Signaling server is ready.
+  room.on('members', members => {
+    console.log('MEMBERS', members);
+    // If we are the second user to connect to the room we will be creating the offer
+    const isOfferer = members.length === 2;
+    startWebRTC(isOfferer);
+  });
+});
+
+// Send signaling data via Scaledrone
+function sendMessage(message) {
+  drone.publish({
+    room: roomName,
+    message
+  });
+}
+
+function startWebRTC(isOfferer) {
+  pc = new RTCPeerConnection(configuration);
+
+  // 'onicecandidate' notifies us whenever an ICE agent needs to deliver a
+  // message to the other peer through the signaling server
+  pc.onicecandidate = event => {
+    if (event.candidate) {
+      sendMessage({'candidate': event.candidate});
+    }
+  };
+
+  // If user is offerer let the 'negotiationneeded' event create the offer
+  if (isOfferer) {
+    pc.onnegotiationneeded = () => {
+      pc.createOffer().then(localDescCreated).catch(onError);
+    }
+  }
+
+  // When a remote stream arrives display it in the #remoteVideo element
+  pc.ontrack = event => {
+    const stream = event.streams[0];
+    if (!remoteVideo.srcObject || remoteVideo.srcObject.id !== stream.id) {
+      remoteVideo.srcObject = stream;
+    }
+  };
+
+  navigator.mediaDevices.getUserMedia({
+    audio: true,
+    video: true,
+  }).then(stream => {
+    // Display your local video in #localVideo element
+    localVideo.srcObject = stream;
+    // Add your stream to be sent to the conneting peer
+    stream.getTracks().forEach(track => pc.addTrack(track, stream));
+  }, onError);
+
+  // Listen to signaling data from Scaledrone
+  room.on('data', (message, client) => {
+    // Message was sent by us
+    if (client.id === drone.clientId) {
+      return;
+    }
+
+    if (message.sdp) {
+      // This is called after receiving an offer or answer from another peer
+      pc.setRemoteDescription(new RTCSessionDescription(message.sdp), () => {
+        // When receiving an offer lets answer it
+        if (pc.remoteDescription.type === 'offer') {
+          pc.createAnswer().then(localDescCreated).catch(onError);
         }
+      }, onError);
+    } else if (message.candidate) {
+      // Add the new ICE candidate to our connections remote description
+      pc.addIceCandidate(
+        new RTCIceCandidate(message.candidate), onSuccess, onError
+      );
+    }
+  });
+}
 
-/*
-        var peerConnection;
-        var dataChannel;
-        var input = document.getElementById("messageInput");
-        var videoElement = document.getElementById("videoElement");
-
-
-        function initialize() {
-            var configuration = null;
-
-            peerConnection = new RTCPeerConnection(configuration, {
-                optional : [ {
-                    RtpDataChannels : true
-                } ]
-            });
-
-            peerConnection.onaddstream = function(event) {
-                videoElement.srcObject = event.stream;
-            };
-
-            // Setup ice handling
-            peerConnection.onicecandidate = function(event) {
-                if (event.candidate) {
-                    send({
-                        event : "candidate",
-                        data : event.candidate
-                    });
-                }
-            };
-
-            // creating data channel
-            dataChannel = peerConnection.createDataChannel("dataChannel", {
-                reliable : true
-            });
-
-            dataChannel.onerror = function(error) {
-                console.log("Error occured on datachannel:", error);
-            };
-
-            // when we receive a message from the other peer, printing it on the console
-            dataChannel.onmessage = function(event) {
-                console.log("message:", event.data);
-                peerConnection.addStream(stream);
-            };
-
-            dataChannel.onclose = function() {
-                console.log("data channel is closed");
-            };
-        }
-
-        function handleOffer(offer) {
-            peerConnection.setRemoteDescription(new RTCSessionDescription(offer));
-
-            // create and send an answer to an offer
-            peerConnection.createAnswer(function(answer) {
-                peerConnection.setLocalDescription(answer);
-                send({
-                    event : "answer",
-                    data : answer
-                });
-            }, function(error) {
-                alert("Error creating an answer");
-            });
-        };
-
-        function handleCandidate(candidate) {
-            peerConnection.addIceCandidate(new RTCIceCandidate(candidate));
-        };
-
-        function handleAnswer(answer) {
-            peerConnection.setRemoteDescription(new RTCSessionDescription(answer));
-            console.log("connection established successfully!!");
-        };
-
-        function sendMessage() {
-            dataChannel.send(input.value);
-            input.value = "";
-        }
-*/
-    </script>
+function localDescCreated(desc) {
+  pc.setLocalDescription(
+    desc,
+    () => sendMessage({'sdp': pc.localDescription}),
+    onError
+  );
+}
+</script>
 </html>
