--- a/src/main/resources/templates/newIndex.html
+++ b/src/main/resources/templates/newIndex.html
@@ -3,65 +3,133 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
     <title>WebRTC demo</title>
+    <div th:replace="fragments/header :: header-css"/>
 </head>
 <style>
-    .container {
-        background: rgb(148, 144, 144);
-        margin: 50px auto;
-        max-width: 80%;
-        text-align: center;
-        padding: 2%;
+    body {
+        /*display: block;*/
+        align-items: center;
+        justify-content: center;
+        font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+        font-size: 16px;
+        height: 100vh;
     }
-
-    button {
-        margin: 1em;
+    .content {
+        box-shadow: rgba(156, 172, 172, 0.2) 0px 2px 2px, rgba(156, 172, 172, 0.2) 0px 4px 4px, rgba(156, 172, 172, 0.2) 0px 8px 8px, rgba(156, 172, 172, 0.2) 0px 16px 16px, rgba(156, 172, 172, 0.2) 0px 32px 32px, rgba(156, 172, 172, 0.2) 0px 64px 64px;
+        border-radius: 3px;
+        height: 100vh;
+        max-height: 600px;
+        width: 100vw;
+        max-width: 400px;
+        display: flex;
+        flex-direction: column;
+        margin-left: auto;
+        margin-right: auto;
     }
-
-    input {
-        margin-top: 1em;
+    .messages {
+        flex-grow: 1;
+        padding: 20px 30px;
+        overflow: auto;
     }
-
+    .message {
+        display: flex;
+        flex-direction: column;
+    }
+    .message--mine {
+        align-items: flex-end;
+    }
+    .message--theirs {
+        align-items: flex-start;
+    }
+    .message__name {
+        padding: 10px 0;
+    }
+    .message__bubble {
+        padding: 20px;
+        border-radius: 3px;
+    }
+    .message--theirs .message__bubble {
+        background: #6363bf;
+        color: white;
+    }
+    .message--mine .message__bubble {
+        background: rgba(156, 172, 172, 0.2);
+    }
     .footer {
-        background: rgb(148, 144, 144);
-        text-align: center;
-        padding: 2%;
-        position: absolute;
-        bottom: 0;
-        width: 100%;
+        line-height: 76px;
+        border-top: 1px solid rgba(156, 172, 172, 0.2);
+        display: flex;
+        flex-shrink: 0;
     }
+    input {
+        height: 76px;
+        border: none;
+        flex-grow: 1;
+        padding: 0 30px;
+        font-size: 16px;
+        background: transparent;
+    }
+    button {
+        border: none;
+        background: transparent;
+        padding: 0 30px;
+        font-size: 16px;
+        cursor: pointer;
+    }
+
 </style>
-
 <body>
+<div th:replace="fragments/header :: header"/>
 
-<h1>A Demo for messaging in WebRTC</h1>
 
-<h3>
-    Run two instances of this webpage along with the server to test this
-    application.<br> Create an offer, and then send the message. <br>Check
-    the browser console to see the output.
-</h3>
-<div>
-    User: <div id = "name" class = "name" sec:authentication="name"></div>
+<div class="content">
+    <button type="button" class="btn btn-primary" onclick='createOffer()'>Create Offer</button>
+    <div class="messages">
+
+    </div>
+    <form class="footer" onsubmit="return false;">
+        <input id="messageInput"  type="text" placeholder="Your message..">
+        <button type="submit" onclick='sendMessage()'>Send</button>
+    </form>
 </div>
 
+<template data-template="message">
+    <div class="message">
+        <div class="message__name"></div>
+        <div class="message__bubble"></div>
+    </div>
+</template>
+
 <!--WebRTC related code-->
-<button type="button" class="btn btn-primary" onclick='createOffer()'>Create
-    Offer</button>
-<input id="messageInput" type="text" class="form-control"
-       placeholder="message">
-<button type="button" class="btn btn-primary" onclick='sendMessage()'>SEND</button>
+
+
+<!--<input id="messageInput" type="text" class="form-control" placeholder="message">-->
+
+<!--<button type="button" class="btn btn-primary" '>SEND</button>-->
 
 <center>
     <video id="video-from-camera" autoplay style="max-width: 300px;"></video>
     <!-- <canvas id="video-canvas" style="height: 480px; width: 720px;"></canvas><br /><br /> -->
 </center>
+
 <div th:replace="fragments/footer :: footer"/>
-
-
 <script>
+    const possibleEmojis = [
+        '🐀','🐁','🐭','🐹','🐂','🐃','🐄','🐮','🐅','🐆','🐯','🐇','🐐','🐑','🐏','🐴',
+        '🐎','🐱','🐈','🐰','🐓','🐔','🐤','🐣','🐥','🐦','🐧','🐘','🐩','🐕','🐷','🐖',
+        '🐗','🐫','🐪','🐶','🐺','🐻','🐨','🐼','🐵','🙈','🙉','🙊','🐒','🐉','🐲','🐊',
+        '🐍','🐢','🐸','🐋','🐳','🐬','🐙','🐟','🐠','🐡','🐚','🐌','🐛','🐜','🐝','🐞',
+    ];
+
+    function randomEmoji() {
+        var randomIndex = Math.floor(Math.random() * possibleEmojis.length);
+        return possibleEmojis[randomIndex];
+    }
+
     //connecting to our signaling server
-    let conn = new WebSocket('ws://192.168.1.79:8080/socket');
+    let conn = new WebSocket('ws://localhost:8080/socket');
     let name = $("#name").html();
+    const emoji = randomEmoji();
 
     conn.onopen = function() {
         console.log("Connected to the signaling server");
@@ -136,7 +204,27 @@
     }
 
     function insertMessageToDOM(options, isFromMe) {
-        console.log(options.name + ": " + options.content);
+        const template = document.querySelector('template[data-template="message"]');
+        const nameEl = template.content.querySelector('.message__name');
+
+        if (options.name) {
+            nameEl.innerText = options.emoji + ' ' + options.name;
+        }
+        template.content.querySelector('.message__bubble').innerText = options.content;
+        const clone = document.importNode(template.content, true);
+        const messageEl = clone.querySelector('.message');
+
+        if (isFromMe) {
+            messageEl.classList.add('message--mine');
+        } else {
+            messageEl.classList.add('message--theirs');
+        }
+        const messagesEl = document.querySelector('.messages');
+        messagesEl.appendChild(clone);
+
+        // Scroll to bottom
+        messagesEl.scrollTop = messagesEl.scrollHeight - messagesEl.clientHeight;
+        // console.log(options.name + ": " + options.content);
     }
 
     function createOffer() {
@@ -182,9 +270,12 @@
         const data = {
             name,
             content: input.value,
+            emoji,
         };
         input.value = "";
         dataChannel.send(JSON.stringify(data));
+
+        insertMessageToDOM(data, true);
     }
 </script>
 <!--WebRTC related code-->
