--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,21 +40,17 @@
 </body>
 
 <script>
-// Generate random room name if needed
+// Генерация случайного названия комнаты, если необходимо
 if (!location.hash) {
   location.hash = Math.floor(Math.random() * 0xFFFFFF).toString(16);
 }
 const roomHash = location.hash.substring(1);
 
-// TODO: Replace with your own channel ID
+// TODO: заменить на свой собственный идентификатор канала
 const drone = new ScaleDrone('yiS12Ts5RdNhebyM');
-// Room name needs to be prefixed with 'observable-'
+// Название комнаты должно иметь префикс «observable-»
 const roomName = 'observable-' + roomHash;
-const configuration = {
-  iceServers: [{
-    urls: 'stun:stun.l.google.com:19302'
-  }]
-};
+var configuration = null;
 let room;
 let pc;
 
@@ -74,17 +70,17 @@ drone.on('open', error => {
       onError(error);
     }
   });
-  // We're connected to the room and received an array of 'members'
-  // connected to the room (including us). Signaling server is ready.
+  // Мы подключены к комнате и получили массив "участников"
+  // подключен к комнате (включая нас). Сигнальный сервер готов.
   room.on('members', members => {
     console.log('MEMBERS', members);
-    // If we are the second user to connect to the room we will be creating the offer
+    // Если мы второй пользователь, который подключится к комнате, мы создадим предложение
     const isOfferer = members.length === 2;
     startWebRTC(isOfferer);
   });
 });
 
-// Send signaling data via Scaledrone
+// Отправить данные сигнализации через Scaledrone
 function sendMessage(message) {
   drone.publish({
     room: roomName,
@@ -95,22 +91,22 @@ function sendMessage(message) {
 function startWebRTC(isOfferer) {
   pc = new RTCPeerConnection(configuration);
 
-  // 'onicecandidate' notifies us whenever an ICE agent needs to deliver a
-  // message to the other peer through the signaling server
+  // «onicecandidate» уведомляет нас, когда агенту ICE необходимо доставить
+  // сообщение другому узлу через сервер сигнализации
   pc.onicecandidate = event => {
     if (event.candidate) {
       sendMessage({'candidate': event.candidate});
     }
   };
 
-  // If user is offerer let the 'negotiationneeded' event create the offer
+  // Если пользователь является оферентом, пусть событие'gotiationneeded 'создает предложение
   if (isOfferer) {
     pc.onnegotiationneeded = () => {
       pc.createOffer().then(localDescCreated).catch(onError);
     }
   }
 
-  // When a remote stream arrives display it in the #remoteVideo element
+  // Когда приходит удаленный поток, отобразите его в элементе #remoteVideo
   pc.ontrack = event => {
     const stream = event.streams[0];
     if (!remoteVideo.srcObject || remoteVideo.srcObject.id !== stream.id) {
@@ -122,29 +118,29 @@ function startWebRTC(isOfferer) {
     audio: true,
     video: true,
   }).then(stream => {
-    // Display your local video in #localVideo element
+    // Показать ваше локальное видео в элементе #localVideo
     localVideo.srcObject = stream;
-    // Add your stream to be sent to the conneting peer
+    // Добавьте ваш поток для отправки на одноранговый узел
     stream.getTracks().forEach(track => pc.addTrack(track, stream));
   }, onError);
 
-  // Listen to signaling data from Scaledrone
+  // Прослушайте данные сигнализации от Scaledrone
   room.on('data', (message, client) => {
-    // Message was sent by us
+    // Сообщение отправлено нами
     if (client.id === drone.clientId) {
       return;
     }
 
     if (message.sdp) {
-      // This is called after receiving an offer or answer from another peer
+      // Это вызывается после получения предложения или ответа от другого партнера
       pc.setRemoteDescription(new RTCSessionDescription(message.sdp), () => {
-        // When receiving an offer lets answer it
+        // При получении предложения отвечаем на него
         if (pc.remoteDescription.type === 'offer') {
           pc.createAnswer().then(localDescCreated).catch(onError);
         }
       }, onError);
     } else if (message.candidate) {
-      // Add the new ICE candidate to our connections remote description
+      // Добавить нового кандидата ICE в описание удаленного соединения
       pc.addIceCandidate(
         new RTCIceCandidate(message.candidate), onSuccess, onError
       );
